dns/external-dns.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.5
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=aiasv.dev
            - --provider=google
            - --log-format=json
            - --google-zone-visibility=public
            - --policy=upsert-only
            - --registry=txt
            - --txt-owner-id=cluster
            - --google-project=aia-project-435110
          volumeMounts:
            - name: gcp-key-secret
              mountPath: /etc/secrets/gcp-key-secret
              readOnly: true
      volumes:
        - name: gcp-key-secret
          secret:
            secretName: gcp-key-secret
